--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div class="row gy-4">
 
           <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-up" data-aos-delay="100">
-            <img src="assets/img/schemeee.png" class="img-fluid" alt="">
+            <img src="./assets/img/schemeee.png" class="img-fluid" alt="">
           </div>
 
           <div class="col-lg-6 order-2 order-lg-1 content" data-aos="fade-up" data-aos-delay="200">
@@ -114,7 +114,7 @@
             <a href="https://wa.me/77473436257?text=Здравствуйте%2C+хочу+уточнить+по+поводу+склада" class="read-more">
               <span style="margin-right: 10px;">Связаться</span>
               <!-- <i class="bi bi-arrow-right"></i> -->
-              <img src="assets/img/wpp.png" alt="Штрихкод" style="width: 57px; height: auto; ">
+              <img src="./assets/img/wpp.png" alt="Штрихкод" style="width: 57px; height: auto; ">
           </a>
           
           </div>
