--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
           <li><a href="#about">О НАС</a></li>
           <!-- <li><a href="#services">Сервис</a></li> -->
           <li><a href="#services">УСЛУГИ</a></li>
+          <li><a href="#features">УСЛОВИЯ</a></li>
           <li><a href="#contact">КОНТАКТЫ</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -202,7 +203,7 @@
             <div class="icon flex-shrink-0"><i class="bi bi-mailbox-flag"></i></div>
             <div>
               <h4 class="title"><a href="#" class="stretched-link">Услуги доставки</a></h4>
-              <p class="description">Осуществление приемо-сдачных операции с вагонами на подъездных путях.</p>
+              <p class="description">Мы организуем перевозку товаров по городу, региону и междугородним направлениям, обеспечивая полный контроль на каждом этапе.</p>
             </div>
           </div><!-- End Service Item -->
 
@@ -222,7 +223,7 @@
     </section><!-- /Services Section -->
 
     <!-- Features Section -->
-    <section id="features" class="features section">
+    <section id="#" class="features section">
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
@@ -270,7 +271,164 @@
 
       </div>
 
-    </section><!-- /Features Section -->
+<!-- Features Section -->
+<section id="features" class="features section bg-light py-5">
+  <div class="container text-center" data-aos="fade-up">
+    <h2 class="mb-3">
+      Склад временного хранения </br>  <sub>"</sub>ИМПОРТ 40"  -   <sub>"</sub>ИМПОРТ 70" <br>
+    </h2>
+    <h3 class="mb-4">Условия помещения товаров под таможенную процедуру</h3>
+
+    <div class="mx-auto" style="max-width: 850px; text-align: left;">
+      <ul style="line-height: 1.8; font-size: 16px; padding-left: 1.2rem;">
+        <li class="mb-2">
+          Допускается помещение без фактического размещения на таможенном складе товаров, если габариты превышают допустимые, при наличии разрешения от таможенного органа в письменной форме.
+        </li>
+        <li class="mb-2">
+          Могут размещаться товары, срок годности которых на день их таможенного декларирования составляет менее 180 (ста восьмидесяти) календарных дней
+        </li>
+        <li class="mb-2">
+          Не могут помещаться товары по перечню, определяемому решением Комиссии таможенного союза. (специфические товары: оружие, наркотики, ряд опасных грузов)
+        </li>
+        <li class="mb-2">
+          Могут быть помещены иностранные товары в целях приостановления действия таможенных процедур временного ввоза или переработки на таможенной территории.
+        </li>
+        <li class="mb-2">
+          Допускается ВЭД, поместившие товар на таможенный склад, могут осматривать и измерять товар, следить за его сохранностью. По разрешению таможенного органа дробиться, сортироваться, упаковываться, маркироваться и пр. Единственное ограничение - операции, совершаемые с товарами, не должны изменять его классификационный код ТН ВЭД.
+        </li>
+        <li class="mb-2">
+          Данная процедура предполагает хранение груза без уплаты пошлин и налогов с максимальным сроком 3 года. Размещение товаров на складе осуществляется путем подачи таможенной декларации.
+        </li>
+        <li class="mb-2">
+          По окончании срока хранения товара на таможенном складе, товар должен быть помещен под иную таможенную процедуру в течении 3 дней. Товар можно помещать под другую таможенную процедуру частями или весь целиком
+        </li>
+      </ul>
+    </div>
+  </div>
+</section>
+
+<!-- Features Section -->
+<section id="#" class="features section bg-light py-5">
+  <div class="container text-center" data-aos="fade-up">
+    <h3 class="mb-4">Оформление, условия</h3>
+    
+    <div class="mx-auto" style="max-width: 850px; text-align: left;">
+      <p>Товары предназначенные для внутреннего потребления - ввозятся под кодом ИМ 40. Это
+        означает, что после прохождения таможенного контроля, ввезённые товары можно использовать в свободном назначении: продавать, дарить, использовать по назначению и т.д
+        Процедуру импортного таможенного оформления можно использовать для:</p>
+      <ul style="line-height: 1.8; font-size: 16px; padding-left: 1.2rem;">
+        <li class="mb-2">
+          ввоза иностранного товара для внутреннего потребления;
+        </li>
+        <li class="mb-2">
+          закрытия процедуры временного ввоза;
+        </li>
+        <li class="mb-2">
+          закрытия процедуры переработки на таможенной территории;
+        </li>
+      </ul>
+      <p><strong>Описание процесса импортного таможенного оформления:</strong></p>
+      <p>Для оперативного прохождения таможни без задержек - необходимо особо тщательно проработать все необходимые сопроводительные документы заранее. В ином случае - малейшая ошибка может привести к простою груза на таможне, а следовательно, к увеличению издержек и срыву сроков поставки.
+        Специалисты ЕТЕ разделяют процедуру импортного таможенного оформления на два основных этапа:</p>
+        <p><strong>1.Подготовительный этап (до прибытия на таможню)</strong></p>
+        <ul style="line-height: 1.8; font-size: 16px; padding-left: 1.2rem;">
+          <li class="mb-2">
+            Запрос подробной информации о грузе, технического описания товара;
+          </li>
+          <li class="mb-2">
+            Подбор кода ТН ВЭД на основе предоставленной информации;
+          </li>
+          <li class="mb-2">
+            Предварительный расчёт таможенных платежей;
+          </li>
+          <li class="mb-2">
+            Определение перечня и подготовка необходимых разрешительных документов
+(сертификаты, декларации соответствия, лицензии и пр.);
+          </li>
+          <li class="mb-2">
+            Формирование коммерческих документов (контракт, инвойс, упаковочный лист и пр.);
+          </li>
+        </ul>
+        <p><strong>2.Таможенные операции (поcле прибытия на таможню)</strong></p>
+        <p><strong>Документы, необходимые для импортного таможенного оформления</strong></p>
+        <p>Для импортного таможенного оформления груза необходимо иметь все документы, которые относятся к поставке. Стандартный перечень документов, которые могут потребоваться выглядит следующим образом:</p>
+        <ul style="line-height: 1.8; font-size: 16px; padding-left: 1.2rem;">
+          <li class="mb-2">
+            Счёт-фактура (Invoice) с переводом на русский язык;
+          </li>
+          <li class="mb-2">
+            Техническое описание на товар (паспорт безопасности «MSDS» для химической продукции);
+          </li>
+          <li class="mb-2">
+            Упаковочный лист (Packing list) - при необходимости;
+          </li>
+          <li class="mb-2">
+            Транспортная накладная (CMR, AWB, ж/д накладная, коносамент) - в зависимости от вида транспорта;
+          </li>
+          <li class="mb-2">
+            Сертификаты/декларации соответствия и другие разрешительные документы - при необходимости;
+          </li>
+          <li class="mb-2">
+            Сертификат происхождения СТ-1/СТ-2 или Form А - при необходимости;
+Сведения о контракте - уникальный номер присвоенный банком контракту свыше 3 млн. руб.;
+          </li>
+          <li class="mb-2">
+            Платёжное поручение на таможню;
+          </li>
+          <li class="mb-2">
+            Платёжка, выписка со счёта или заявление на перевод денежных средств, доказывающие
+факт оплаты за товар, если она предусмотрена по контракту;
+          </li>
+          <li class="mb-2">
+            Страховка;
+          </li>
+          <li class="mb-2">
+            Транспортный договор и счёт за транспорт - при необходимости;
+          </li>
+          <li class="mb-2">
+            Экспортная декларация (EX1);
+          </li>
+          <li class="mb-2">
+            * Прайс-лист завода изготовителя, заверенный Торгово-Промышленной Палатой (ТПП) страны происхождения - при необходимости; Обязательная маркировка товара знаком
+EAC, подлежащему обязательной сертификации в РФ (ЕАЭС), согласно техническому регламенту (решение N9711 от 2012 и No22 от 2016);
+          </li>
+        </ul>
+        <p><strong>Таможенные платежи при импортном таможенном оформлении</strong></p>
+      <p>При ввозе товара на территорию РФ и прохождении процедуры импортного таможенного оформления необходимо произвести оплату таможенных платежей. К основным таможенным платежам при импорте относятся:</p>
+      <ul style="line-height: 1.8; font-size: 16px; padding-left: 1.2rem;">
+        <li class="mb-2">
+          Ввозные таможенные пошлины;
+        </li>
+        <li class="mb-2">
+Таможенные сборы;
+        </li>
+        <li class="mb-2">
+          НДС;
+        </li>
+        <li class="mb-2">
+          Акцизы;
+        </li>
+        <li class="mb-2">
+          Антидемпинговые и ксмпенсационные пошлины;
+        </li>
+        <li class="mb-2">
+          Меры нетарифного регулирования;
+        </li>
+      </ul>
+      <p>Размер таможенных платежей при импортном таможенном оформлении зависит от ввозимогс груза и указанного в декларацли кода ТН ВЭД. Расчёт происходит от указанной таможенной стоимости товара. Для ряда грузов законодательством предусмотрены льготы, полностью или частично освобождающие от таможенных платежей.</p>
+      <p><strong>За точным расчётом таможен ых платежей обращайтесь к нашему специалисту.</strong></p>
+      <a href="https://wa.me/77473436257?text=Здравствуйте%2C+хочу+уточнить+по+поводу+перевозки" 
+   class="read-more"
+   style="background-color: #ffc107; color: #fff; padding: 10px 20px; border-radius: 6px; text-decoration: none; display: inline-flex; align-items: center; font-weight: 600;">
+  
+  <span style="margin-right: 10px;">Заказать перевозку</span>
+  <i class="bi bi-arrow-right"></i>
+</a>
+
+    </div>
+  </div>
+</section>
+
 
     <!-- Call To Action Section -->
     <!-- <section id="call-to-action" class="call-to-action section dark-background">
@@ -404,7 +562,7 @@
           <h4>Социальные сети</h4>
           <div class="social-links d-flex">
             <a href="instagram.com" class="instagram"><i class="bi bi-instagram"></i></a>
-            <a href="https://wa.me/77473436257?text=Здравствуйте%2C+хочу+уточнить+по+поводу+склада" target="_blank"" class="linkedin"><i class="bi bi-whatsapp"></i></a>
+            <a href="https://wa.me/77473436257?text=Здравствуйте%2C+хочу+уточнить+по+поводу+склада" target="_blank" class="linkedin"><i class="bi bi-whatsapp"></i></a>
           </div>
         </div>
 
