--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@ EAC, подлежащему обязательной сертификации в
         </li>
       </ul>
       <p>Размер таможенных платежей при импортном таможенном оформлении зависит от ввозимогс груза и указанного в декларацли кода ТН ВЭД. Расчёт происходит от указанной таможенной стоимости товара. Для ряда грузов законодательством предусмотрены льготы, полностью или частично освобождающие от таможенных платежей.</p>
-      <p><strong>За точным расчётом таможен ых платежей обращайтесь к нашему специалисту.</strong></p>
+      <p><strong>За точным расчётом таможенных платежей обращайтесь к нашему специалисту.</strong></p>
       <a href="https://wa.me/77473436257?text=Здравствуйте%2C+хочу+уточнить+по+поводу+перевозки" 
    class="read-more"
    style="background-color: #ffc107; color: #fff; padding: 10px 20px; border-radius: 6px; text-decoration: none; display: inline-flex; align-items: center; font-weight: 600;">
