--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
       <div class="container text-center" data-aos="fade-up" data-aos-delay="100">
         <img src="assets/img/logo.png" class="img-fluid mb-3" alt="">
-        <h2>Склад временного хранения </br>  <sub>"</sub>ИМПОРТ 40"  -   <sub>"</sub>ИМПОРТ 70"</h2>
+        <h2>Склады временного хранения </br>  <sub>"</sub>ИМПОРТ 40"  -   <sub>"</sub>ИМПОРТ 70"</h2>
         <!-- <p>KLC <span class="typed" data-typed-items="Склада временного хранения"></span></p> -->
         <div>
           <!-- <a href="#about" class="cta-btn">Get Started</a> -->
@@ -275,9 +275,9 @@
 <section id="features" class="features section bg-light py-5">
   <div class="container text-center" data-aos="fade-up">
     <h2 class="mb-3">
-      Склад временного хранения </br>  <sub>"</sub>ИМПОРТ 40"  -   <sub>"</sub>ИМПОРТ 70" <br>
+      Режим таможенного склада </br>  <sub>"</sub>ИМПОРТ 70"<br>
     </h2>
-    <h3 class="mb-4">Условия помещения товаров под таможенную процедуру</h3>
+    <h3 class="mb-4">Оформление, условие помещения товаров под таможенную процедуру</h3>
 
     <div class="mx-auto" style="max-width: 850px; text-align: left;">
       <ul style="line-height: 1.8; font-size: 16px; padding-left: 1.2rem;">
@@ -310,7 +310,11 @@
 <!-- Features Section -->
 <section id="#" class="features section bg-light py-5">
   <div class="container text-center" data-aos="fade-up">
+    <h2 class="mb-3">
+      Склад временного хранения </br>  <sub>"</sub>ИМПОРТ 40" <br>
+    </h2>
     <h3 class="mb-4">Оформление, условия</h3>
+    <h4 class="mb-4">Склады для терминальной обработки</h4>
     
     <div class="mx-auto" style="max-width: 850px; text-align: left;">
       <p>Товары предназначенные для внутреннего потребления - ввозятся под кодом ИМ 40. Это
@@ -416,7 +420,7 @@ EAC, подлежащему обязательной сертификации в
         </li>
       </ul>
       <p>Размер таможенных платежей при импортном таможенном оформлении зависит от ввозимогс груза и указанного в декларацли кода ТН ВЭД. Расчёт происходит от указанной таможенной стоимости товара. Для ряда грузов законодательством предусмотрены льготы, полностью или частично освобождающие от таможенных платежей.</p>
-      <p><strong>За точным расчётом таможенных платежей обращайтесь к нашему специалисту.</strong></p>
+      <p><strong>За точным расчётом таможен ых платежей обращайтесь к нашему специалисту.</strong></p>
       <a href="https://wa.me/77473436257?text=Здравствуйте%2C+хочу+уточнить+по+поводу+перевозки" 
    class="read-more"
    style="background-color: #ffc107; color: #fff; padding: 10px 20px; border-radius: 6px; text-decoration: none; display: inline-flex; align-items: center; font-weight: 600;">
