--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <h1 class="sitename">KLC</h1>
       </a>
 
-      <nav id="navmenu" class="navmenu">
+      <nav id="navmenu" class="votaidi">
         <ul>
           <li><a href="#hero" class="active">ГЛАВНАЯ</a></li>
           <li><a href="#about">О НАС</a></li>
